--- a/PTIT_CNTT4_IT104_Session25/BaiTapVeNha/package.json
+++ b/PTIT_CNTT4_IT104_Session25/BaiTapVeNha/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ptit-cntt4-it104-session24",
+  "name": "baitapvenha",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,11 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "antd": "^5.27.3",
-    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "uuid": "^13.0.0"
+    "react-router-dom": "^6.30.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
