--- a/PTIT_CNTT4_IT104_Session39/BTVN/server/package.json
+++ b/PTIT_CNTT4_IT104_Session39/BTVN/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    ""
+    "server": "json-server --w db.json --port 8080"
   },
   "keywords": [],
   "author": "",
